<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="248dp"
        android:layout_height="105dp"
        android:text="Community Eats"
        android:gravity="center"
        android:textColor="#58E967"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <EditText
        android:id="@+id/input_username_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/input_email_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Email"
        app:layout_constraintEnd_toEndOf="@+id/input_username_register"
        app:layout_constraintStart_toStartOf="@+id/input_username_register"
        app:layout_constraintTop_toBottomOf="@+id/input_username_register" />

    <EditText
        android:id="@+id/input_password_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:hint="Password"
        app:layout_constraintEnd_toEndOf="@+id/input_email_registration"
        app:layout_constraintStart_toStartOf="@+id/input_email_registration"
        app:layout_constraintTop_toBottomOf="@+id/input_email_registration" />

    <EditText
        android:id="@+id/input_address_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="Address"
        app:layout_constraintEnd_toEndOf="@+id/input_password_registration"
        app:layout_constraintStart_toStartOf="@+id/input_password_registration"
        app:layout_constraintTop_toBottomOf="@+id/input_password_registration" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="226dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:shadowColor="#FFFFFF"
        android:text="Register"
        android:textColorHighlight="#FDFDFD"
        app:backgroundTint="#58E967"
        android:background="@drawable/rounded_button"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/input_address_registration"
        app:layout_constraintStart_toStartOf="@+id/input_address_registration"
        app:layout_constraintTop_toBottomOf="@+id/input_address_registration" />

    <Button
        android:id="@+id/btnHaveAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Already have an Account"
        android:src="@drawable/community_eats_logo_white"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="#58E967"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>
